Exercicios dia 3 (favoritar lista + gerar d20)

--- a/angular.json
+++ b/angular.json
@@ -5,7 +5,14 @@
   "projects": {
     "projeto-angular": {
       "projectType": "application",
-      "schematics": {},
+      "schematics": {
+        "@schematics/angular:component": {
+          "skipTests": true
+        },
+        "@schematics/angular:directive": {
+          "skipTests": true
+        }
+      },
       "root": "",
       "sourceRoot": "src",
       "prefix": "app",
